# CellBender

./: .dockerignore  .dockstore.yml  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  PR_MPS_support.md  README.md  README.rst  REQUIREMENTS-DOCKER.txt  REQUIREMENTS-RTD.txt  REQUIREMENTS.txt  benchmark_mps.sh  build_docker.sh  build_docker_local.sh  build_docker_release.sh  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.py  test_mps_fallback.py  test_real_command.py  test_torch_sees_env.py
.github/workflows/: ci.yml  docker.yml  miniwdl_check.yml  pypi.yml  run_packaging_check.yml  run_pytest.yml
cellbender/: VERSION.txt  __init__.py  base_cli.py  command_line.py  monitor.py
cellbender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cellbender/remove_background/: argparse.py  argparser.py  checkpoint.py  cli.py  command_line.py  consts.py  device_utils.py  downstream.py  estimation.py  exceptions.py  gmm.py  infer.py  model.py  mps_diagnostics.py  posterior.py  pyro_mps_patch.py  report.ipynb  report.py  run.py  sparse_utils.py  train.py
cellbender/remove_background/data/: dataprep.py  dataset.py  io.py  priors.py  simulate.py  transform.py
cellbender/remove_background/distributions/: NegativeBinomial.py  NegativeBinomialPoissonConv.py  NegativeBinomialPoissonConvApprox.py  NullDist.py
cellbender/remove_background/tests/: conftest.py  mckp_memory_profiling.py  miniwdl_check_wdl.sh  test.py  test_checkpoint.py  test_dataprep.py  test_dataset.py  test_downstream.py  test_estimation.py  test_infer.py  test_integration.py  test_io.py  test_monitor.py  test_posterior.py  test_sparse_utils.py  test_train.py
cellbender/remove_background/vae/: base.py  decoder.py  encoder.py
docker/: Dockerfile  DockerfileGit
docs/source/: conf.py  index.rst
docs/source/_static/: theme_overrides.css
docs/source/changelog/: index.rst
docs/source/citation/: index.rst
docs/source/contributing/: index.rst
docs/source/getting_started/: index.rst
docs/source/help_and_reference/: index.rst
docs/source/installation/: index.rst
docs/source/introduction/: index.rst
docs/source/reference/: index.rst
docs/source/troubleshooting/: index.rst
docs/source/tutorial/: index.rst
docs/source/usage/: index.rst
examples/remove_background/: .gitignore  README.md  generate_tiny_10x_dataset.py  generate_tiny_10x_pbmc.py
proto/chimera/: TODO.txt  commons.py  pyro_extras.py  sc_fingerprint.py
proto/chimera/misc/: diffusion_sparse_reconstruction.ipynb  family_size_distribution_mixture_model.ipynb
proto/chimera/notebooks/: alevin__arbo_analysis.ipynb  alevin__vs_cr_pbmc.ipynb  alevin_vs_cr_pbmc.ipynb  cython_stratified_sampler.ipynb  dtm_exploration.ipynb  fsd_pca_ica_nmf.ipynb  (+22 more)
tests/: conftest.py  mckp_memory_profiling.py  test_checkpoint.py  test_dataprep.py  test_dataset.py  test_downstream.py  test_estimation.py  test_integration.py  test_io.py  test_monitor.py  test_posterior.py  test_sparse_utils.py  test_train.py
tests/benchmarking/: benchmark_inputs.json  cuda_check_inputs.json  run_benchmark.py  run_benchmark_result_tabulation.py
wdl/: README.rst  benchmark.wdl  cellbender_remove_background.wdl  cellbender_remove_background_azure.wdl  docker_image_check_cuda_status.wdl  run_benchmark.py  run_usual_benchmarks.sh
(+42 files in other folders)
