[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cellbender"
authors = [{name = "Stephen Fleming"}, {name = "Mehrtash Babadi"}]
license = {text = "BSD (3-Clause)"}
description = "A software package for eliminating technical artifacts from high-throughput single-cell RNA sequencing (scRNA-seq) data"
keywords = ["scRNA-seq", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "http://github.com/broadinstitute/CellBender"
Documentation = "http://cellbender.readthedocs.io"

[project.scripts]
cellbender = "cellbender.base_cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "cellbender.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
optional-dependencies.docs = {file = ["requirements-rtd.txt"]}

[tool.setuptools.package-data]
"*" = ["cellbender.remove_background.report.ipynb", "cellbender.VERSION.txt"]
